--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
   "author": "Sokdara Cheng <chengsokdara@gmail.com> (https://chengsokdara.github.io)",
   "repository": "github:chengsokdara/use-whisper",
   "scripts": {
-    "dev": "env NODE_ENV=development tsup",
-    "build": "env NODE_ENV=production tsup",
+    "dev": "cross-env NODE_ENV=development tsup",
+    "build": "cross-env NODE_ENV=production tsup",
     "lint-fix": "eslint ./src --ext .ts,.tsx --quiet --fix --ignore-path ./.gitignore",
     "lint-format": "prettier  --loglevel warn --write \"./**/*.{ts,tsx,css,md,json}\"",
     "lint": "yarn lint-format && yarn lint-fix",
